Bug 1219166 - SM LCov: Prevent reporting empty compartments, and empty runtimes. r=bhackett