js/src/vm/CodeCoverage.h
@@ -30,9 +30,14 @@ class LCovSource
   public:
     explicit LCovSource(LifoAlloc* alloc, JSObject* sso);
 
-    // Wether the given script source object matches this LCovSource.
-    bool match(JSObject* sso) {
+    // Whether the given script source object matches this LCovSource.
+    bool match(JSObject* sso) const {
         return sso == source_;
+    }
+
+    // Whether the current source is complete and if it can be flushed.
+    bool isComplete() const {
+        return hasFilename_ && hasScripts_;
     }
 
     // Visit all JSScript in pre-order, and collect the lcov output based on
@@ -100,7 +105,7 @@ class LCovCompartment
 
     // Write the Lcov output in a buffer, such as the one associated with
     // the runtime code coverage trace file.
-    void exportInto(GenericPrinter& out) const;
+    void exportInto(GenericPrinter& out, bool* isEmpty) const;
 
   private:
     // Write the script name in out.
@@ -151,6 +156,14 @@ class LCovRuntime
     // the child process.
     void maybeReopenAfterFork();
 
+    // Fill an array with the name of the file. Return false if we are unable to
+    // serialize the filename in this array.
+    bool fillWithFilename(char *name, size_t length);
+
+    // Finish the current opened file, and remove if it does not have any
+    // content.
+    void finishFile();
+
   private:
     // Output file which is created if code coverage is enabled.
     Fprinter out_;
@@ -158,6 +171,11 @@ class LCovRuntime
     // The process' PID is used to watch for fork. When the process fork,
     // we want to close the current file and open a new one.
     size_t pid_;
+
+    // Flag used to report if the generated file is empty or not. If it is empty
+    // when the runtime is destroyed, then the file would be removed as an empty
+    // file is not a valid LCov file.
+    bool isEmpty_;
 };
 
 } // namespace coverage
